# TrabalhoFinalPOO

./: CMakeLists.txt  LICENSE  README.md
build-gui/: CMakeCache.txt  Makefile  cmake_install.cmake
build-gui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-gui/gui/include/: moc_BoardWidget.cpp  moc_BoardWidget.cpp_parameters  moc_CardDialog.cpp  moc_CardDialog.cpp_parameters  moc_CardWidget.cpp  moc_CardWidget.cpp_parameters  moc_MainWindow.cpp  moc_MainWindow.cpp_parameters
design/: README.md
design/docs/: README-Etapa2.md  README.md
design/include/: ActivityLog.h  AssigneeFilter.h  Board.h  Card.h  Column.h  ICardFilter.h  ISerializer.h  IView.h  JsonSerializer.h  TagFilter.h  User.h
gui/include/: BoardWidget.h  CardDialog.h  CardWidget.h  ColumnWidget.h  MainWindow.h
gui/src/: BoardWidget.cpp  CardDialog.cpp  CardWidget.cpp  ColumnWidget.cpp  MainWindow.cpp  main.cpp
src/: ActivityLog.cpp  AssigneeFilter.cpp  Board.cpp  Card.cpp  Column.cpp  JsonSerializer.cpp  TagFilter.cpp  User.cpp
tools/: headers_check.cpp  kanban_cli.cpp
